tests/semantic_errors/andrei15_3.tl
require "ifj21"

global name : function (integer)
function name    (a : number) end
function name    () end

function main()
end

main()
